# Earlybird_Github

./: .env.template  .gitignore  .kilocodemodes  2echo  ALEAGUE_SCRAPER_VPS_FIXES.md  ALEAGUE_SCRAPER_VPS_FIXES_APPLIED_REPORT.md  ALERTMODIFICATION_PROBLEMS_RESOLUTION_REPORT.md  ALERT_ID_CONSISTENCY_FIX_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_SNAPSHOT_V10.5.md  BEATWRITER_INTELLIGENCE_ENHANCEMENT_REPORT.md  BETTINGDECISION_PRIMARY_MARKET_FIX_REPORT.md  BISCOTTO_ENGINE_CRITICAL_BUGS_FIXES_APPLIED_REPORT.md  BISCOTTO_ENGINE_MIGRATION_V13_REPORT.md  BISCOTTO_ENGINE_V13_FIXES_APPLIED_REPORT.md  BRAVE_SEARCH_PROVIDER_IMPROVEMENTS_APPLIED.md  BRAVE_SEARCH_PROVIDER_THREAD_SAFETY_FIX_APPLIED.md  BTTSIMPACT_CASE_INSENSITIVE_FIX_REPORT.md  BUDGETSTATUS_INTELLIGENT_INTEGRATION_FIXES_APPLIED_REPORT.md  BUDGETSTATUS_PROBLEMS_RESOLUTION_REPORT.md  BUDGET_MANAGER_VPS_FIXES_APPLIED_REPORT.md  BUG7_FIX_SUMMARY.md  BUSINESS_METRICS_VPS_FIXES_APPLIED_REPORT.md  CACHEDTWEET_CARDSIGNAL_FIXES_APPLIED_REPORT.md  CACHEDTWEET_CARDSIGNAL_INTELLIGENT_INTEGRATION_FIXES_APPLIED_REPORT.md  CACHE_IMPROVEMENTS_V12.5_IMPLEMENTATION_REPORT.md  CARDSIGNAL_TYPE_CONSISTENCY_FIX_REPORT.md  CHANNELMETRICS_FIXES_APPLIED_REPORT.md  CLVSTATS_FIXES_APPLIED_REPORT.md  COMPREHENSIVE_TEST_REPORT_2026-02-17.md  CONTRACT_CLASS_INTEGRATION_VPS_FIXES_APPLIED_REPORT.md  CONTRACT_CLASS_V14_0_CRITICAL_FIXES_APPLIED_REPORT.md  CONTRACT_CLASS_VERIFICATION_SUMMARY.md  CORRECTION_1_FIX_REPORT.md  CORRECTION_2_FIX_REPORT.md  COVE_ALERTMODIFICATION_DOUBLE_VERIFICATION_REPORT.md  COVE_ALERTMODIFICATION_FINAL_SUMMARY.md  (+461 more)
(+1003 files in other folders)
