[project]
name = "earlybird"
version = "6.0"
description = "EarlyBird - Intelligent Sports Betting Alert System"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

# Ignore unused imports in __init__.py files to preserve module exports
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
